force-app/main/default/objects/smartystreets__User_Layout_Mapping__c/smartystreets__User_Layout_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>√ Layout Mapping</label>
</CustomObject>