force-app/main/default/objects/smartystreets__User_Layout_Mapping__c/fields/smartystreets__Name__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>