force-app/main/default/objects/smartystreets__User_Layout_Mapping__c/fields/smartystreets__Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Record_Type_Name__c</fullName>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>