force-app/main/default/objects/smartystreets__User_Layout_Mapping__c/fields/smartystreets__SetupOwnerId__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__SetupOwnerId__c</fullName>
    <label>SetupOwnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>