force-app/main/default/objects/smartystreets__User_Layout_Mapping__c/fields/smartystreets__sObject__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__sObject__c</fullName>
    <label>sObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>